# Polkadot-Dart

./: .gitignore  README.md  build.yaml  main.dart  metadataPha.dart  pubspec.yaml
.github/workflows/: build_bindings_ios_android_macos.yml  build_bindings_linux.yml  build_linux.yml  rust_binding.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: p4d_rust_binding.podspec  polkadot_dart.podspec
ios/Classes/: P4dRustBindingPlugin.h  P4dRustBindingPlugin.m  PolkadotDartPlugin.h  SubstrateSignFlutterPlugin.h  SwiftP4dRustBindingPlugin.swift
lib/: p4d_rust_binding.dart  polkadot_dart.dart
lib/bindings/: bindings.dart  ffi_base.dart  ffi_helpers.dart
lib/crypto/: common.dart  crypto.dart  curve.dart  ed25519.dart  secp256k1.dart  sr25519.dart  util.dart
lib/direct/: iapi.dart  ifunction.dart  imodule.dart  irpc_function.dart  irpc_module.dart  isection.dart
lib/keyring/: defaults.dart  keyring.dart  nobody.dart  pair.dart  pairs.dart  testingPairs.dart  types.dart
lib/metadata/: MagicNumber.dart  Metadata.dart  MetadataVersioned.dart
lib/metadata/decorate/: types.dart
lib/metadata/util/: extractTypes.dart  fluttenUniq.dart  getUniqTypes.dart  toCallsOnly.dart  validateTypes.dart
lib/metadata/v10/: toV11.dart
lib/metadata/v11/: toV12.dart
lib/metadata/v12/: static.json  (+1 more)
lib/networks/: networks.dart  types.dart
lib/rpc/: core_irpc.dart  json_author.dart  json_chain.dart  json_rpc.dart  json_state.dart  json_system.dart  types.dart
lib/rpc_core/: index.dart  interface.dart
lib/rpc_provider/: defaults.dart  types.dart
lib/types/: types.dart
lib/types-known/: index.dart  modules.dart
lib/util_crypto/: address.dart  base32.dart  base58.dart  base64.dart  blake2.dart  ethereum.dart  keccak.dart  key.dart  mnemonic.dart  nacl.dart  pbkdf2.dart  random.dart  schnorrkel.dart  scrypt.dart  secp256k1.dart  sha512.dart  signature.dart  types.dart  util_crypto.dart  xxhash.dart
lib/utils/: bn.dart  compact.dart  extension.dart  format.dart  hex.dart  is.dart  logger.dart  metadata.dart  number.dart  si.dart  string.dart  time.dart  types.dart  u8a.dart  utils.dart
lib/wrapper/: crypto.dart  ed25519.dart  sr25519.dart  util.dart
rust/: Cargo.toml  Cargo.toml.bak  makefile.bak
rust/src/: bip32.rs  bip39.rs  common.rs  ed25519.rs  hashing.rs  lib.rs  sr25519.rs  substrate.rs  util.rs
scripts/: build.sh  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  clean.sh  init.sh  runTest.sh  variables.sh
test/: metajson.dart  p4d_rust_binding_test.dart  polkadot_dart_test.dart
test/crypto/: common.dart  crypto.dart  ed25519.dart  sr25519.dart
test/fixtures/: metadata_v12.dart  schnorrkel_tests.dart
test/keyring/: keyring.dart  pair.dart  testingPairs.dart
test/metadata/: index.dart  magicNumber.dart  metadata.dart  testUtils.dart
test/networks/: networks.dart
test/testUtils/: throws.dart
test/types/: types.dart
test/types-known/: index.dart
test/util_crypto/: address.dart  base32.dart  base58.dart  base64.dart  blake2.dart  ethereum.dart  keccak.dart  key.dart  mnemonic.dart  nacl.dart  pbkdf2.dart  random.dart  schnorrkel.dart  scrypt.dart  secp256k1.dart  sha512.dart  signature.dart  util_crypto.dart  xxhash.dart
test/utils/: bn.dart  compact.dart  extension.dart  format.dart  hex.dart  is.dart  metadata.dart  string.dart  time.dart  u8a.dart  utils.dart
type_gen/: .flutter-plugins  .flutter-plugins-dependencies  build.yaml  pubspec.yaml
type_gen/lib/: annotations.dart  build_interfaces.dart  builder.dart  formatter.dart  type_gen.dart  utils.dart  v12.dart
(+396 files in other folders)
