[package]
name = "p4d_rust_binding"
version = "0.0.1"
authors = ["neeboo <ghostcorn@gmail.com>"]
edition = "2018"

[lib]
name = "p4d_rust_binding"
crate-type = ["staticlib", "cdylib"]

[dependencies]
base58 = "0.1.0"
substrate-bip39 = "0.4.2"
tiny-bip39 = { version = "0.7.3", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.4.1"
schnorrkel = "0.9.1"
serde_json = "1.0"
blake2-rfc = "0.2.18"
ethsign = { version = "0.7.3", default-features = false, features = ["pure-rust"] }
rustc-hex = "2.1.0"
