[package]
name = "p4d_rust_binding"
version = "0.0.1"
authors = ["neeboo <ghostcorn@gmail.com>"]
edition = "2018"

[lib]
name = "p4d_rust_binding"
crate-type = ["staticlib", "cdylib"]

[dependencies]
base58 = "0.1.0"
substrate-bip39 = "0.4.2"
# tiny-bip39 = { version = "0.7.3", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.4.1"
# schnorrkel = "0.9.1"
serde_json = "1.0"
# blake2-rfc = "0.2.18"
ethsign = { version = "0.7.3", default-features = false, features = ["pure-rust"] }
rustc-hex = "2.1.0"

#
backtrace = "0.3.38"
blake2-rfc = "0.2.18"
byteorder = "1.3.1"
secp256k1 = "0.19.0"
ed25519-dalek = { version = "1.0.0-pre.4", features = [] }
hmac = { version = "0.7.0", default-features = false }
# libsecp256k1 = "0.2.2"
pbkdf2 = { version = "0.3.0", default-features = false }
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"] }
scrypt = { version = "0.2", default-features = false }
sha2 = { version = "0.8.1", default-features = false }
tiny-bip39 = { version = "0.7", default-features = false }
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
twox-hash = "1.5.0"
wasm-bindgen = "=0.2.65"
wee_alloc = "0.4.3"
hex = "0.4.2"
derivation-path = { version = "0.1.3", default-features = false }

[dev-dependencies]
hex-literal = "0.2.0"
rand = "0.7.3"

[profile.release]
lto = true
codegen-units = 1
debug = true